Fix screen index preference resetting unexpectedly

Update MainWindow::moveEvent() to correctly handle a result of -1 from
QApplication::desktop()->screenNumber() ("widget is not on any screen"),
which was previously causing a user preference for "show yakuake on a
fixed screen" to revert to "show yakuake on the same screen as the
mouse".

BUG: 445106
(cherry picked from commit 554ca4bc41ba9018cc0819707c788fb02447a906)